k8s-tests/chainsaw/helm/helm-webhook-test/assert-scheduled.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/default-container: manager
  labels:
    app: nodewright-controller-manager
    app.kubernetes.io/instance: webhooks
    app.kubernetes.io/name: nodewright
    control-plane: controller-manager
  namespace: skyhook
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
spec:
  containers:
  - name: manager
status:
  (conditions[?type == 'Ready']):
  - status: 'True'
  (conditions[?type == 'PodScheduled']):
  - status: 'True'
  (conditions[?type == 'ContainersReady']):
  - status: 'True'
  phase: Running
